CDK and  service versions updates

--- a/graviton/cs_graviton/Dockerfile
+++ b/graviton/cs_graviton/Dockerfile
@@ -1,20 +1,20 @@
 # Learn about building .NET container images:
 # https://github.com/dotnet/dotnet-docker/blob/main/samples/README.md
-FROM mcr.microsoft.com/dotnet/sdk:9.0-bookworm-slim AS build
+FROM mcr.microsoft.com/dotnet/sdk:10.0-noble AS build
 WORKDIR /source
 
-# copy csproj and restore as distinct layers
+# Copy project file and restore as distinct layers
 COPY aspnetapp/*.csproj .
 RUN dotnet restore 
 
-# copy everything else and build app
-COPY aspnetapp/. .
+# Copy source code and publish app
+COPY --link aspnetapp/. .
 RUN dotnet publish --no-restore -o /app
 
 
-# final stage/image
-FROM mcr.microsoft.com/dotnet/aspnet:9.0-bookworm-slim
+# Runtime stage
+FROM mcr.microsoft.com/dotnet/aspnet:10.0-noble
 WORKDIR /app
-COPY --from=build /app .
+COPY --link --from=build /app .
 USER $APP_UID
 ENTRYPOINT ["./aspnetapp"]
